--- a/templates/theme.html
+++ b/templates/theme.html
@@ -148,7 +148,7 @@
                       <circle class="bg" cx="27" cy="27" r="23" fill="none" stroke-width="6"/>
                       <circle class="fg" cx="27" cy="27" r="23" fill="none" stroke-width="6" stroke-linecap="round" stroke-dasharray="0 999" stroke-dashoffset="{{ pct_str }}"/>
                     </svg>
-                    <div class="pct">{{ pct_str }}%{{ correct_count }}/{{ theme.quizzes_count }}</div>
+                    <div class="pct">{{ pct_str }}%</div>
                   </div>
             
                 {% endwith %}
@@ -166,7 +166,7 @@
                         </clipPath>
                         </defs>
                         </svg>
-                         {{ test.correct_answers }}</div>
+                         {{ test.correct_answers }}/{{ pct_str }}%{{ correct_count }}/{{ theme.quizzes_count }}</div>
                   <div class="bg-white  check-btn px-3 py-2 mb-2">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_36_153)">
