--- a/templates/theme.html
+++ b/templates/theme.html
@@ -143,10 +143,10 @@
                     <div class="mt-2" style="font-weight:600;">{{ user.text.test_result }}</div>
                   </div>  
                  
-                  <div class="ring" data-correct="{{ correct_count }}" data-total="{{ theme.quizzes_count }}">
-                    <svg width="54" height="54" viewBox="0 0 54 54">
-                      <circle class="bg" cx="27" cy="27" r="23" fill="none" stroke-width="6"/>
-                      <circle class="fg" cx="27" cy="27" r="23" fill="none" stroke-width="6" stroke-linecap="round" stroke-dasharray="0 999" stroke-dashoffset="{{ pct_str }}"/>
+                  <div class="ring" data-correct="{{ test.correct_answers|correct_count }}" data-total="{{ theme.quizzes_count }}">
+                    <svg width="54" height="54" viewBox="0 0 54 54" style="transform: rotate(-90deg);">
+                      <circle class="bg" cx="27" cy="27" r="23" fill="none" stroke-width="6" pathLength="100" stroke-dasharray="100 100" />
+                      <circle class="fg" cx="27" cy="27" r="23" fill="none" stroke-width="6" stroke-linecap="round" pathLength="100" stroke-dasharray="100 100" stroke-dashoffset="70"/>
                     </svg>
                     <div class="pct">{{ pct_str }}%</div>
                   </div>
@@ -166,7 +166,7 @@
                         </clipPath>
                         </defs>
                         </svg>
-                         {{ test.correct_answers }}/{{ pct_str }}%{{ correct_count }}/{{ theme.quizzes_count }}</div>
+                         {{ test.correct_answers|correct_count }}/{{ theme.quizzes_count }} ({{ pct_str }}%)</div>
                   <div class="bg-white  check-btn px-3 py-2 mb-2">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_36_153)">
@@ -361,6 +361,11 @@
     </script>
   </body>
 </html>
+
+
+
+
+
 
 
 
