--- a/templates/theme.html
+++ b/templates/theme.html
@@ -166,7 +166,7 @@
                         </clipPath>
                         </defs>
                         </svg>
-                         {{ test.correct_answers|correct_count }}/{{ theme.quizzes_count }} ({{ pct_str }}%)</div>
+                         {{ test.correct_answers}}</div>
                   <div class="bg-white  check-btn px-3 py-2 mb-2">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_36_153)">
