--- a/templates/test.html
+++ b/templates/test.html
@@ -75,7 +75,7 @@
               
                 <span id="timer" class="timer-pill">00:00:00</span>
             </div>
-              <div class="title-center  mb-1">{{ theme.name }}</div>
+              <div class="title-center  mb-1">{{ theme.name|strip_num_prefix}}</div>
         </div>
     </div>
    
