--- a/templates/test.html
+++ b/templates/test.html
@@ -1,3 +1,4 @@
+{% load text_filters %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -75,7 +76,7 @@
               
                 <span id="timer" class="timer-pill">00:00:00</span>
             </div>
-              <div class="title-center  mb-1">{{ theme.name|strip_num_prefix}}</div>
+              <div class="title-center  mb-1">{{ theme.name |strip_num_prefix}}</div>
         </div>
     </div>
    
