--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -1,4 +1,4 @@
-{% load text_filters %}
+ {% load text_filters %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -55,7 +55,7 @@
             <!-- <div style="width:90px;"></div> -->
           </div>
           <h1 class="page-title mb-2 m-0">{{ test.theme }}</h1>
-% with pct_str=test.correct_answers|percent_in_parens %}
+        {% with pct_str=test.correct_answers|percent_in_parens %}
          <div class="position-relative p-3 mb-3" style="background:#ede7ff;border-radius:16px;">
                 <div class="d-flex justify-content-between align-items-center">
                   <div>
@@ -66,7 +66,7 @@
                     <div class="mt-2" style="font-weight:600;">{{ user.text.test_result }}</div>
                   </div>  
                  
-                  <div class="ring" data-correct="{{ test.correct_answers|correct_count }}" data-total="{{ theme.quizzes_count }}">
+                  <div class="ring" data-correct="{{ test.correct_answers|correct_count }}" data-total="{{ test.correct_answers|total_count}}">
                     <svg width="54" height="54" viewBox="0 0 54 54" style="transform: rotate(-90deg);">
                       <circle class="bg" cx="27" cy="27" r="23" fill="none" stroke-width="6" pathLength="100" stroke-dasharray="100 100" />
                       <circle class="fg" cx="27" cy="27" r="23" fill="none" stroke-width="6" stroke-linecap="round" pathLength="100" stroke-dasharray="100 100" stroke-dashoffset="70"/>
