--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -66,13 +66,13 @@
                     <div class="mt-2" style="font-weight:600;">{{ user.text.test_result }}</div>
                   </div>  
                  
-                  <!-- <div class="ring" data-correct="{{ test.correct_answers|correct_count }}" data-total="{{ test.correct_answers|total_count}}">
+                  <div class="ring" data-correct="{{ test.correct_answers|correct_count }}" data-total="{{ test.correct_answers|total_count}}">
                     <svg width="54" height="54" viewBox="0 0 54 54" style="transform: rotate(-90deg);">
                       <circle class="bg" cx="27" cy="27" r="23" fill="none" stroke-width="6" pathLength="100" stroke-dasharray="100 100" />
                       <circle class="fg" cx="27" cy="27" r="23" fill="none" stroke-width="6" stroke-linecap="round" pathLength="100" stroke-dasharray="100 100" stroke-dashoffset="70"/>
                     </svg>
-                    <div class="pct">{{ pct_str }}%</div>
-                  </div> -->
+                    <div class="pct">{{ test.correct_answers|pct_str }}%</div>
+                  </div>
             
                 {% endwith %}
                 </div>
