--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -96,18 +96,17 @@
                     <div class="mt-2" style="font-weight:600;">{{ user.text.test_result }}</div>
                   </div>  
                   {% with pct_str=test.correct_answers|percent_in_parens %}
-                   <div class="ring"    data-correct="14" 
-                     data-total="40">
+                   <div class="ring"    
+                   data-correct="{{ test.correct_answers|correct_count }}" 
+                     data-total="{{ test.correct_answers|total_count }}">
                     <svg width="54" height="54" viewBox="0 0 54 54" style="transform: rotate(-90deg);">
-                      <circle class="bg" cx="27" cy="27" r="23" fill="none" stroke-width="6" pathLength="100" stroke-dasharray="100 100" />
-                      <circle class="fg" cx="27" cy="27" r="23" fill="none" stroke-width="6" stroke-linecap="round" pathLength="100" stroke-dasharray="100 100" stroke-dashoffset="70"/>
+                      <circle class="bg" cx="27" cy="27" r="23" fill="none" stroke-width="6" pathLength="150" stroke-dasharray="150 150" />
+                      <circle class="fg" cx="27" cy="27" r="23" fill="none" stroke-width="6" stroke-linecap="round" pathLength="150" stroke-dasharray="150 150" stroke-dashoffset="70"/>
                     </svg>
                     <div class="pct">{{ pct_str }}%</div>
                   </div>
                   {% endwith %}
-
                 </div>
-            
                 <div class="mt-2">
                   <div class="bg-white  check-btn px-3 py-2 mb-2">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
