--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -179,6 +179,10 @@
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript">
+      try {
+        const stateKey = `test_state_{{ test.user_id }}_{{ test.theme_id }}`;
+        localStorage.removeItem(stateKey);
+      } catch (e) {}
         const webApp = (window.Telegram && window.Telegram.WebApp) ? window.Telegram.WebApp : null;
         function goBack(){
           const form = document.getElementById('back-form');
